udate 2 add web part

--- a/style.css
+++ b/style.css
@@ -6,9 +6,6 @@
 
 
 /* narbar part start */
-h1 {
-    background-color: blue;
-}
 
 .navbar {
     display: flex;
@@ -30,3 +27,176 @@ h1 {
 }
 
 /* navbar part end */
+
+
+
+/* hero sections start */
+.herosection {
+    background-image: url(images/Hero-bg.png);
+    background-repeat: none;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+
+}
+
+
+.heroheader {
+    font-size: 48px;
+    font-weight: 800;
+    text-align: center;
+}
+
+.imageparthero {
+    display: flex;
+    justify-content: center;
+}
+
+.herop {
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 30px;
+}
+
+.buttonhero {
+    background-color: black;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.buttonherofull {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+
+
+/* why web development part start */
+
+
+.fullweb {
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.02);
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 80px;
+    padding: 120px;
+    margin-bottom: 30px;
+
+}
+
+.webtitle {
+    text-align: center;
+
+
+}
+
+.webtitle h1 {
+    font-size: 60px;
+    margin-bottom: 30px;
+}
+
+.webtitle p {
+    font-size: 20px;
+}
+
+.webone {
+    border-radius: 16px;
+    margin-top: 40px;
+    padding: 60px;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 80px;
+
+
+}
+
+.webonehead {
+    font-size: 35px;
+    margin-bottom: 20px;
+    color: #0D1321B3;
+}
+
+.webonep {
+    font-size: 20px;
+    margin-bottom: 40px;
+    color: #0D1321B3;
+}
+
+.webonebutton {
+    padding: 10px;
+    font-size: 20px;
+
+}
+
+/* why web development part end */
+
+
+/* part two */
+
+.webtwo {
+    border-radius: 16px;
+    margin-top: 40px;
+    padding: 60px;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
+    display: flex;
+    justify-content: center;
+
+    margin-bottom: 80px;
+    gap: 100px;
+
+
+}
+
+
+
+/* my insta part start */
+.myins {
+    text-align: center;
+}
+
+.myins h1 {
+    font-size: 32px;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+
+.myins p {
+    font-size: 16px;
+    font-weight: 400;
+    color: #0D1321;
+}
+
+
+.videopart {
+
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    border-radius: 16px;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 30px;
+
+}
+
+
+.fulltarget {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+}
+
+.targetone {
+    border-radius: 16px;
+
+    background: rgba(255, 76, 30, 0.05);
+}
